--- a/Hangman/vite-project/styles/_keyboard.scss
+++ b/Hangman/vite-project/styles/_keyboard.scss
@@ -7,7 +7,8 @@
   align-items: center;
   text-align: center;
   border-radius: 10px;
-  font-size: 16px;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   color: rgb(6, 73, 115);
   cursor: pointer;
