--- a/Hangman/vite-project/style.scss
+++ b/Hangman/vite-project/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;700&family=Josefin+Sans:ital@1&family=Montserrat+Alternates&family=Passions+Conflict&family=Sofia+Sans&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import './styles/keyboard';
 @import './styles/game';
 @import './styles/modal';
@@ -12,26 +14,14 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  background: url('./public/background.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+
+  font-family: 'Lobster', sans-serif;
+
+  background: url('./background.png');
+  // background-size: cover;
+  //background-repeat: no-repeat;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 button {
   border-radius: 8px;
@@ -46,7 +36,7 @@ button {
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: #dee7b7;
 }
 
 button:focus,
