--- a/Hangman/vite-project/style.scss
+++ b/Hangman/vite-project/style.scss
@@ -18,8 +18,9 @@ body {
   font-family: 'Lobster', sans-serif;
 
   background: url('./background.png');
-  // background-size: cover;
-  //background-repeat: no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
+
 }
 
 
