--- a/Hangman/vite-project/styles/_game.scss
+++ b/Hangman/vite-project/styles/_game.scss
@@ -11,10 +11,10 @@
 
 .rightPane,
 .leftPane {
-  width: 50%;
+
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -22,7 +22,12 @@
 }
 
 .rightPane {
+  width: 60%;
   margin-top: 0;
+}
+
+.leftPane {
+  width: 40%;
 }
 
 .title {
@@ -74,8 +79,6 @@
 .counter {
   height: 80px;
 
-  margin-top: 20px;
-  margin-bottom: 20px;
   font-size: 18px;
   font-family: 'Orbitron', sans-serif;
   color: rgb(6, 73, 115);
