--- a/Hangman/vite-project/styles/_keyboard.scss
+++ b/Hangman/vite-project/styles/_keyboard.scss
@@ -45,3 +45,10 @@
   height: 150px;
   padding: 5px;
 }
+
+@media screen and (max-width: 800px) {
+  .keyboard {
+    width: 90%;
+    height: fit-content;
+  }
+}
