feat: add word-question pairs

--- a/Hangman/vite-project/styles/_game.scss
+++ b/Hangman/vite-project/styles/_game.scss
@@ -4,7 +4,8 @@
 
 .gameArea {
   margin: 10px;
-  width: 100vw;
+  max-width: 1400px;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
