--- a/Hangman/vite-project/style.scss
+++ b/Hangman/vite-project/style.scss
@@ -13,12 +13,14 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   height: 100vh;
   font-family: 'Lobster', sans-serif;
 
-  background: url('./background0.png');
-  background-size: auto;
+  background: url('./background01.jpeg');
+  background-size: cover;
   background-repeat: no-repeat;
 
 }
