--- a/Hangman/vite-project/style.scss
+++ b/Hangman/vite-project/style.scss
@@ -7,6 +7,7 @@
 html,
 body {
   height: 100vh;
+  box-sizing: border-box;
 }
 
 body {
@@ -43,28 +44,4 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #dee7b7;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
 }
