--- a/Hangman/vite-project/style.scss
+++ b/Hangman/vite-project/style.scss
@@ -20,7 +20,7 @@ body {
   height: 100vh;
   font-family: 'Lobster', sans-serif;
 
-  background: url('./background01.jpeg');
+  background: url('/background01.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
 
